--- a/odoo-bringout-oca-stock-logistics-warehouse-product_packaging_usability/product_packaging_usability/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-product_packaging_usability/product_packaging_usability/i18n/bs.po
@@ -16,7 +16,7 @@ msgstr ""
 #. module: product_packaging_usability
 #: model_terms:ir.ui.view,arch_db:product_packaging_usability.product_packaging_usability_search
 msgid "Group By"
-msgstr "Grupiši po"
+msgstr "Grupiši po..."
 
 #. module: product_packaging_usability
 #: model_terms:ir.ui.view,arch_db:product_packaging_usability.product_packaging_usability_search
