--- a/odoo-bringout-oca-stock-logistics-warehouse-stock_scrap_location_default/stock_scrap_location_default/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-stock_scrap_location_default/stock_scrap_location_default/i18n/bs.po
@@ -21,7 +21,7 @@ msgstr "Kompanije"
 #. module: stock_scrap_location_default
 #: model:ir.model,name:stock_scrap_location_default.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke"
+msgstr "Postavke konfiguracije"
 
 #. module: stock_scrap_location_default
 #: model:ir.model,name:stock_scrap_location_default.model_stock_scrap
