--- a/odoo-bringout-oca-stock-logistics-workflow-stock_picking_auto_create_lot/stock_picking_auto_create_lot/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_picking_auto_create_lot/stock_picking_auto_create_lot/i18n/bs.po
@@ -26,7 +26,7 @@ msgstr "Vrsta dokumenta"
 #. module: stock_picking_auto_create_lot
 #: model:ir.model,name:stock_picking_auto_create_lot.model_product_template
 msgid "Product"
-msgstr "Artikal"
+msgstr "Proizvod"
 
 #. module: stock_picking_auto_create_lot
 #: model:ir.model,name:stock_picking_auto_create_lot.model_product_category
