--- a/odoo-bringout-oca-stock-logistics-warehouse-base_product_merge/base_product_merge/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-base_product_merge/base_product_merge/i18n/bs.po
@@ -58,17 +58,17 @@ msgstr "ID"
 #. module: base_product_merge
 #: model:ir.model.fields,field_description:base_product_merge.field_base_product_merge____last_update
 msgid "Last Modified on"
-msgstr "Zadnje mijenjano"
+msgstr "Zadnja izmjena na"
 
 #. module: base_product_merge
 #: model:ir.model.fields,field_description:base_product_merge.field_base_product_merge__write_uid
 msgid "Last Updated by"
-msgstr "Zadnji ažurirao"
+msgstr "Zadnje ažuriranje izvršio"
 
 #. module: base_product_merge
 #: model:ir.model.fields,field_description:base_product_merge.field_base_product_merge__write_date
 msgid "Last Updated on"
-msgstr "Zadnje ažurirano"
+msgstr "Zadnje ažuriranje na"
 
 #. module: base_product_merge
 #: model:ir.model.fields,field_description:base_product_merge.field_base_product_merge__merge_method
@@ -98,7 +98,7 @@ msgstr "ORM"
 #. module: base_product_merge
 #: model:ir.model.fields.selection,name:base_product_merge.selection__base_product_merge__ptype__product_product
 msgid "Product"
-msgstr "Artikal"
+msgstr "Proizvod"
 
 #. module: base_product_merge
 #: model:ir.model.fields,field_description:base_product_merge.field_base_product_merge__product_tmpl_ids
