--- a/odoo-bringout-oca-stock-logistics-warehouse-stock_removal_location_by_priority/stock_removal_location_by_priority/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-stock_removal_location_by_priority/stock_removal_location_by_priority/i18n/bs.po
@@ -16,7 +16,7 @@ msgstr ""
 #. module: stock_removal_location_by_priority
 #: model:ir.model,name:stock_removal_location_by_priority.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke"
+msgstr "Postavke konfiguracije"
 
 #. module: stock_removal_location_by_priority
 #: model:ir.model,name:stock_removal_location_by_priority.model_stock_location
