--- a/odoo-bringout-oca-stock-logistics-workflow-delivery_procurement_group_carrier/delivery_procurement_group_carrier/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-delivery_procurement_group_carrier/delivery_procurement_group_carrier/i18n/bs.po
@@ -21,7 +21,7 @@ msgstr "Način dostave"
 #. module: delivery_procurement_group_carrier
 #: model:ir.model,name:delivery_procurement_group_carrier.model_procurement_group
 msgid "Procurement Group"
-msgstr "Grupa naručivanja"
+msgstr "Nalog za nabavu"
 
 #. module: delivery_procurement_group_carrier
 #: model:ir.model,name:delivery_procurement_group_carrier.model_stock_return_picking
