--- a/odoo-bringout-oca-stock-logistics-workflow-stock_landed_costs_purchase_auto/stock_landed_costs_purchase_auto/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_landed_costs_purchase_auto/stock_landed_costs_purchase_auto/i18n/bs.po
@@ -31,12 +31,12 @@ msgstr "Nabavke"
 #. module: stock_landed_costs_purchase_auto
 #: model:ir.model,name:stock_landed_costs_purchase_auto.model_purchase_order
 msgid "Purchase Order"
-msgstr "Nalog za nabavu"
+msgstr "Zahtjevi za nabavom"
 
 #. module: stock_landed_costs_purchase_auto
 #: model:ir.model,name:stock_landed_costs_purchase_auto.model_purchase_order_line
 msgid "Purchase Order Line"
-msgstr "Stavka naloga za nabavu"
+msgstr "Stavka zahtjeva za nabavu"
 
 #. module: stock_landed_costs_purchase_auto
 #: model:ir.model,name:stock_landed_costs_purchase_auto.model_stock_landed_cost
