--- a/odoo-bringout-oca-stock-logistics-workflow-stock_picking_back2draft/stock_picking_back2draft/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_picking_back2draft/stock_picking_back2draft/i18n/bs.po
@@ -23,7 +23,7 @@ msgstr "Nazad u skicu"
 #. module: stock_picking_back2draft
 #: model:ir.model,name:stock_picking_back2draft.model_stock_move
 msgid "Stock Move"
-msgstr "Skladišni prijenos"
+msgstr "Skladišno kretanje"
 
 # taken from hr.po
 #. module: stock_picking_back2draft
