--- a/odoo-bringout-oca-stock-logistics-workflow-stock_picking_to_batch_group_fields/stock_picking_to_batch_group_fields/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_picking_to_batch_group_fields/stock_picking_to_batch_group_fields/i18n/bs.po
@@ -52,7 +52,7 @@ msgstr "Kreirano"
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field__display_name
 msgid "Display Name"
-msgstr "Naziv za prikaz"
+msgstr "Prikazani naziv"
 
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field__field_id
@@ -97,17 +97,17 @@ msgstr ""
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field____last_update
 msgid "Last Modified on"
-msgstr "Zadnja izmjena"
+msgstr "Zadnja izmjena na"
 
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field__write_uid
 msgid "Last Updated by"
-msgstr "Zadnje ažurirao"
+msgstr "Zadnje ažuriranje izvršio"
 
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field__write_date
 msgid "Last Updated on"
-msgstr "Zadnje ažurirano"
+msgstr "Zadnje ažuriranje na"
 
 #. module: stock_picking_to_batch_group_fields
 #: model:ir.model.fields,field_description:stock_picking_to_batch_group_fields.field_stock_picking_batch_creator_group_field__picking_to_batch_id
