--- a/odoo-bringout-oca-stock-logistics-workflow-stock_procurement_customer/stock_procurement_customer/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_procurement_customer/stock_procurement_customer/i18n/bs.po
@@ -31,7 +31,7 @@ msgstr "Id kupca vidljiv"
 #. module: stock_procurement_customer
 #: model:ir.model,name:stock_procurement_customer.model_procurement_group
 msgid "Procurement Group"
-msgstr "Grupa naručivanja"
+msgstr "Nalog za nabavu"
 
 #. module: stock_procurement_customer
 #: model:ir.model,name:stock_procurement_customer.model_stock_move
